layout issues fixed

--- a/src/components/ProductCard/styles.css
+++ b/src/components/ProductCard/styles.css
@@ -1,41 +1,47 @@
 .product-card {
-    background: #ededed;
-    border-radius: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-    min-width: 260px;
+  background: #ededed;
+  border-radius: 10px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  min-width: 260px;
+}
+
+.product-card img {
+  margin-left: auto;
+  margin-right: auto;
+  width: 220px;
+  display: block;
+}
+
+.product-card h1 {
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.product-card p {
+  font-style: italic;
+  font-size: 14px;
+  font-weight: 400;
+  color: #585858;
+}
+
+.product-card button {
+  width: 100%;
+  height: 40px;
+  text-transform: uppercase;
+  color: white;
+  font-weight: 700;
+  font-size: 14px;
+  background-color: #00285f;
+}
+
+@media (min-width: 576px) {
+  .product-card {
+    min-width: 200px;;
   }
-  
-  .product-card img {
-      margin-left: auto;
-      margin-right: auto;
-      width: 220px;
-      display: block;
-  }
-  
-  .product-card h1 {
-    font-size: 18px;
-    font-weight: 700;
-    text-align: center;
-  }
-  
-  .product-card p {
-    font-style: italic;
-    font-size: 14px;
-    font-weight: 400;
-    color: #585858;
-  }
-  
-  .product-card button {
-    width: 100%;
-    height: 40px;
-    text-transform: uppercase;
-    color:white;
-    font-weight: 700;
-    font-size: 14px;
-    background-color:#00285F;
-  }
+}
